# TechnoVisualsVulkanCpp

./: .gitignore  ARCHITECTURE_3_LAYERS.md  BUILD.md  CMakeLists.txt  EffectChain.h  EffectNode.h  FiltergraphCompiler.h  MULTIPASS_IMPLEMENTATION_STATUS.md  MultiPassPipeline.cpp  MultiPassPipeline.h  ProjectState.h  RenderJob.h  TODO  Timeline.h  VideoStaging.cpp  VideoStaging.h  build_and_run.sh  build_and_run_windows.ps1  build_windows.ps1  check_shaders.ps1  cleanup_procedural_spv.ps1  controls_state.cfg  hello  imgui.ini  main  main.cpp  video_speeds.json  visual_controls.json  visual_controls.json.bak
post_effects/: effect_acid_feedback.glsl  effect_bass_threshold.glsl  effect_bloom_aces.glsl  effect_chromatic_pulse.glsl  effect_crt.glsl  effect_digital_glitch.glsl  effect_feedback_warp.glsl  effect_filmic.glsl  effect_gradient_exchange.glsl  effect_grayscale.glsl  effect_kaleidoscope.glsl  effect_kaleidoscope_mirror.glsl  effect_lens_distort.glsl  effect_little_planet.glsl  effect_luminance_shift.glsl  effect_mirror.glsl  effect_mirror_horizontal.glsl  effect_mirror_kaleido.glsl  effect_mirror_rorschach.glsl  effect_mirror_vertical.glsl  effect_passthrough.glsl  effect_pixel_sort.glsl  effect_pixel_sort_threshold.glsl  effect_pixel_sort_vertical.glsl  effect_pixel_tiles.glsl  effect_pixelate_128.glsl  effect_pixelate_192.glsl  effect_pixelate_256.glsl  effect_pixelate_64.glsl  effect_plasma_overlay.glsl  effect_posterize_edge.glsl  effect_radial_blur.glsl  effect_reaction_diffusion.glsl  effect_recursive_energy.glsl  effect_recursive_feedback.glsl  effect_rgb_shift.glsl  effect_ring_distortion.glsl  effect_rotating_lens.glsl  effect_sobel_advanced.glsl  effect_sobel_edge.glsl  (+5 more)
presets/: AAA.json  ColoresFader.json  Fadefix.json  Fav1.json  GOD.json  God.json  Locaso.json  LucesTop.json  MV1.json  MV2.json  Mix333.json  Mosca.json  NiceColors.json  NormalMix.json  Ojos.json  OjosTrippy.json  RayosOjo.json
procedural/: procedural_anaglyph.glsl  procedural_breathing.glsl  procedural_cylinder_repeat.glsl  procedural_eiyeron.glsl  procedural_flopine.glsl  procedural_flopine2.glsl  procedural_head.glsl  procedural_header.glsl  procedural_helpers.glsl  procedural_kaleidoscope.glsl  procedural_main.glsl  procedural_message.glsl  procedural_pack1.glsl  procedural_pack10.glsl  procedural_pack11.glsl  procedural_pack13.glsl  procedural_pack14.glsl  procedural_pack15.glsl  procedural_pack16.glsl  procedural_pack17.glsl  procedural_pack18.glsl  procedural_pack19.glsl  procedural_pack2.glsl  procedural_pack20.glsl  procedural_pack21.glsl  procedural_pack22.glsl  procedural_pack23.glsl  procedural_pack24.glsl  procedural_pack25.glsl  procedural_pack26.glsl  procedural_pack27.glsl  procedural_pack28.glsl  procedural_pack29.glsl  procedural_pack3.glsl  procedural_pack30.glsl  procedural_pack31.glsl  procedural_pack32.glsl  procedural_pack33.glsl  procedural_pack34.glsl  procedural_pack35.glsl  (+58 more)
shaders/: fullscreen.frag  fullscreen.frag.spv  fullscreen.vert  fullscreen.vert.spv  pass_a_base.comp  pass_a_base.comp.spv  pass_a_base.frag  pass_a_base.frag.spv  pass_b_spatial.comp  pass_b_spatial.comp.spv  pass_b_spatial.frag  pass_b_spatial.frag.spv  pass_c_detail.comp  pass_c_detail.comp.spv  pass_c_detail.frag  pass_c_detail.frag.spv  pass_d_temporal.comp  pass_d_temporal.comp.spv  pass_d_temporal.frag  pass_d_temporal.frag.spv  pass_e_degradation.comp  pass_e_degradation.comp.spv  pass_e_degradation.frag  pass_e_degradation.frag.spv  pass_f_color.comp  pass_f_color.comp.spv  pass_f_color.frag  pass_f_color.frag.spv  pass_g_output.comp  pass_g_output.comp.spv  pass_g_output.frag  pass_g_output.frag.spv  pass_shared.vert  pass_shared.vert.spv  post_common_vulkan.glsl  present.frag  present.frag.spv  present.vert.spv  procedural_all.glsl  procedural_anaglyph.glsl  (+6 more)
shaders/post_effects/: effect_acid_feedback.comp  effect_acid_feedback.comp.spv  effect_ascii.comp  effect_ascii.comp.spv  effect_bass_threshold.comp  effect_bass_threshold.comp.spv  effect_bloom_aces.comp  effect_bloom_aces.comp.spv  effect_chromatic_pulse.comp  effect_chromatic_pulse.comp.spv  effect_crt.comp  effect_crt.comp.spv  effect_digital_glitch.comp  effect_digital_glitch.comp.spv  effect_feedback_warp.comp  effect_feedback_warp.comp.spv  effect_filmic.comp  effect_filmic.comp.spv  effect_gradient_exchange.comp  effect_gradient_exchange.comp.spv  effect_grayscale.comp  effect_grayscale.comp.spv  effect_kaleidoscope.comp  effect_kaleidoscope.comp.spv  effect_kaleidoscope_mirror.comp  effect_kaleidoscope_mirror.comp.spv  effect_lens_distort.comp  effect_lens_distort.comp.spv  effect_little_planet.comp  effect_little_planet.comp.spv  effect_luminance_shift.comp  effect_luminance_shift.comp.spv  effect_mirror.comp  effect_mirror.comp.spv  effect_mirror_horizontal.comp  effect_mirror_horizontal.comp.spv  effect_mirror_kaleido.comp  effect_mirror_kaleido.comp.spv  effect_mirror_rorschach.comp  effect_mirror_rorschach.comp.spv  (+142 more)
src/: main.cpp  ubo_layout.h
src/app/: Application.cpp  Application.h  AudioSystem.cpp  AudioSystem.h  ControlState.cpp  ControlState.h  MidiSystem.cpp  MidiSystem.h  OscSystem.cpp  OscSystem.h  PlaybackClock.h  ProjectState.h  Timeline.h  UISystem.cpp  UISystem.h  VisualControls.h
src/core/: VulkanContext.cpp  VulkanContext.h  VulkanPresenter.cpp  VulkanPresenter.h  Window.cpp  Window.h
src/gfx/: FrameSystem.cpp  FrameSystem.h  MemoryAllocator.cpp  MemoryAllocator.h  ResourceSystem.cpp  ResourceSystem.h
src/render/: DescriptorSetManager.cpp  DescriptorSetManager.h  EffectChain.h  EffectNode.h  Export.h  FiltergraphCompiler.h  GlobalUBO.h  MultiPassPipeline.cpp  MultiPassPipeline.h  RenderJob.h  ShaderCompiler.cpp  ShaderCompiler.h  UniformBufferManager.cpp  UniformBufferManager.h
src/video/: CpuFramePool.h  FrameLayout.h  StagingRing.h  VideoPlayer.cpp  VideoPlayer.h  VideoRegistry.cpp  VideoRegistry.h  VideoRenderer.cpp  VideoRenderer.h  VideoStaging.h  VideoTexture.cpp  (+1 more)
tools/: frag_to_compute.py  gen_ubo_glsl.py  generate_procedural_effects.py  post_to_compute.py  procedural_to_compute.py
(+14 files in other folders)
